# opentelemetry-instrumentation-claude-agent-sdk

./: Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
.specify/memory/: constitution.md
specs/001-otel-genai-semconv/: quickstart.md  spec.md
specs/001-otel-genai-semconv/contracts/: public-api.md
src/opentelemetry/instrumentation/claude_agent_sdk/: _constants.py  _context.py  _hooks.py  _instrumentor.py  _spans.py  version.py
tests/integration/: test_client_multi_turn.py  test_standalone_query.py  test_tool_tracing.py
tests/unit/: conftest.py  test_invoke_agent.py  test_multi_turn.py  test_spans.py  test_tool_spans.py
